[project]
name = "agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=7.2.1",
    "openai>=1.59.9",
    "phidata>=2.7.9",
    "pytest>=8.3.4",
]

[tool.uv.workspace]
members = ["temp/project/project", "temp/project/temp/project"]
